crates/docnav-typed-fields/tests/ui/field_defs_missing_validation.stderr
error[E0308]: mismatched types
 --> tests/ui/field_defs_missing_validation.rs:6:9
  |
3 |   #[derive(FieldDefs)]
  |            --------- expected due to this
...
6 | /         FieldDef::builder("docnav.defaults.limit_chars")
7 | |             .process("config", ProcessStrategy::json_path(["defaults", "limit_chars"]))
  | |_______________________________________________________________________________________^ expected `FieldDefBuilder<i64>`, found `FieldDefBuilder`
  |
  = note: expected struct `FieldDefBuilder<i64>`
             found struct `FieldDefBuilder<()>`
